...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="LoginView" title="Login" hidesBottomBarWhenPushed="YES" id="BYZ-38-t0r" userLabel="Login View Controller" customClass="LoginViewController" customModule="CF_Apps" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="launch_icon" translatesAutoresizingMaskIntoConstraints="NO" id="biy-XY-d9n">
                                <rect key="frame" x="72" y="1" width="176" height="97"/>
                                <constraints>
...
                                <rect key="frame" x="40" y="108" width="240" height="170"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="API Endpoint" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vKC-fE-s9j">
                                        <rect key="frame" x="69" y="0.0" width="103" height="21"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i1c-w6-o63">
                                        <rect key="frame" x="98" y="140" width="44" height="30"/>
                                        <state key="normal" title="Target">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Hf-qT-0xk" userLabel="Username Field">
                                        <rect key="frame" x="17" y="35" width="205" height="30"/>
                                        <color key="backgroundColor" red="1" green="0.97481899910000003" blue="0.98001719080000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iAf-el-aNP" userLabel="Password Field">
                                        <rect key="frame" x="17" y="75" width="205" height="30"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="110" y="150" width="20" height="20"/>
                                    </activityIndicatorView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0GJ-hf-3Wh" userLabel="Cancel">
                                        <rect key="frame" x="56" y="140" width="48" height="30"/>
                                        <state key="normal" title="Cancel">
...
        <scene sceneID="k3s-2c-sw9">
            <objects>
                <navigationController storyboardIdentifier="NavController" title="Navigation" id="iI1-7F-l9p" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" systemItem="favorites" id="JcZ-Gr-g3K"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Wxu-e4-61o">
...
                    <navigationItem key="navigationItem" id="olq-SB-2eC">
                        <nil key="title"/>
                        <barButtonItem key="leftBarButtonItem" title="Accounts" image="accounts" id="dR8-gx-aRG" userLabel="Accounts Button">
                            <color key="tintColor" red="1" green="0.97481899910000003" blue="0.98001719080000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pivotal Web Services" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ngj-3n-ORk">
                                            <rect key="frame" x="191" y="11" width="113" height="14"/>
                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
...
