...
        if signupURL != "" {
            apiTargetField.isEnabled = false
            apiTargetField.textColor = UIColor.lightGray
            apiTargetField.text = targetURL
            hideTargetField()
        } else {
            let urlString = "https://"
            apiTargetField.isEnabled = true
            apiTargetField.textColor = UIColor.darkGray
            apiTargetField.text = urlString
            showTargetField()
        }
    }
...
            // TODO: Refactor
            startButtonSpinner(targetButton, spinner: apiTargetSpinner)
            CFApi.info(apiURL: urlString) { (info: CFInfo?, error: Error?) in
                self.stopButtonSpinner(self.targetButton, spinner: self.apiTargetSpinner)
                
                if let e = error {
                    Alert.show(self, title: "Error", message: "\(urlString) \(e.localizedDescription)")
                    return
                }
                
                if let i = info {
                    self.apiInfo = i
                    self.hideTargetForm()
...
