...
        }
        
        return cell!
    }
    
    override func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        let action = UITableViewRowAction(style: .normal, title: "Delete", handler: self.deleteRow)
        action.backgroundColor = UIColor.red
        
        return [action]
    }
}

...
